# McMaster_AEV_MPC_Algorithms

./: CMakeLists.txt  README.md  det_racecar.xacro  package.xml  params.yaml  racecar.xacro
config/: dwa_local_planner_params.yaml  explore_lite_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mpc_local_planner_params.yaml  teb_local_planner_params.yaml
launch/: compare_mpc_sim.launch  dwa_explore_sim.launch  experiment.launch  mpc2_explore_sim.launch  racecar_model.launch  simulator.launch  simulator.rviz  teb_explore_sim.launch  teb_man_fwd_sim.launch  teb_nav_sim.launch
learning_models/: add_YOLO_here.txt
maps/: experiment1.pgm  experiment1.yaml  experiment2.pgm  experiment2.yaml  experiment3.pgm  experiment3.yaml  experiment4.pgm  experiment4.yaml  experiment5.pgm  experiment5.yaml  experiment6.pgm  experiment6.yaml  map1.yaml  map2.yaml  map3.yaml  map4.yaml  map5.yaml
msg/: YoloData.msg
node/: FCN.py  YOLO.py  behavior_controller.cpp  collision_assistance.py  experiment.cpp  mux.cpp  navigation.cpp  navigation_PD.cpp  navigation_P_QBMPC.cpp  navigation_P_STLMPC.cpp  navigation_QBMPC.cpp  navigation_STLMPC.cpp  navigation_STLMPC_vary_v.cpp  navigation_bezier.cpp  navigation_bezier_pursuit.cpp  navigation_vary_v.cpp  navigation_velocity.cpp  navigation_velocity_adapt  navigation_velocity_pursuit.cpp  simulator.cpp
rviz/: config.rviz
